# cats-and-dogs-faces-ex

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/cats_dogs_faces_small/: dataset-metadata.json  metadata.csv
lab_utils/: __init__.py  visualization.py
labs/: lab1_basic_numpy.ipynb  lab1_numpy_cats_vs_dogs.ipynb  lab2_basic_pandas.ipynb  lab2_pandas_cats_vs_dogs.ipynb  lab3_basic_pytorch.ipynb  lab3_pytorch_cats_vs_dogs.ipynb
scripts/: download_animal_faces.py  download_original_dogs_vs_cats.py
solutions/: lab1_numpy_cats_vs_dogs_solutions.ipynb  lab2_pandas_cats_vs_dogs_solutions.ipynb  lab3_pytorch_cats_vs_dogs_solutions.ipynb
